--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -53,7 +53,7 @@
   "backup_merge_tile": "Datensicherung zusammenführen",
   "backup_removal_tile": "Datensicherung löschen",
   "backup_creation_dialog_title": "Datensicherung wird erstellt",
-  "backup_creation_dialog_content": "Die Datensicherung wird in der Cloud erstellt. Die aktuellen Daten auf Ihrem Gerät werden gespeichert und ersetzen die aktuellen Sicherungsdaten. Tests werden nicht gespeichert. Wollen Sie fortfahren? ",
+  "backup_creation_dialog_content": "Die Datensicherung wird in der Cloud erstellt. Die aktuellen Daten auf Ihrem Gerät werden gespeichert und ersetzen die aktuellen Sicherungsdaten. Wollen Sie fortfahren? ",
   "backup_creation_dialog_positive": "Erstellen",
   "backup_creation_dialog_tests": "Möchten Sie alle Ihre Tests speichern?",
   "backup_merge_dialog_title": "Kombiniere Datensicherungseinträge",
@@ -362,5 +362,8 @@
   "daily_test_start_button": "Start",
   "daily_test_start_button_tr": "始める",
   "daily_test_cannot_go_back": "Sie führen gerade einen täglichen Test durch. Beenden Sie den Test, Sie können es schaffen!",
-  "settings_notifications_label": "Aktivieren/Deaktivieren von Benachrichtigungen"
+  "settings_notifications_label": "Aktivieren/Deaktivieren von Benachrichtigungen",
+  "stats_tests_by_type": "Gesamtzahl der Tests nach Typ",
+  "stats_tests_total_acc": "Gesamt-Genauigkeit nach Studienmodus",
+  "stats_tests_tap_to_specs": "Tippen Sie auf die Balken, um mehr Details für jeden Testtyp zu sehen"
 }
