--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -53,7 +53,7 @@
   "backup_merge_tile": "Instalar copia de seguridad",
   "backup_removal_tile": "Eliminar copia de seguridad",
   "backup_creation_dialog_title": "Crear copia de seguridad",
-  "backup_creation_dialog_content": "La copia de seguridad se creará en la nube. Los datos actuales de tu dispositivo se guardarán sustituyendo los datos de la copia de seguridad actual. Los tests no se guardarán. ¿Quieres continuar?",
+  "backup_creation_dialog_content": "La copia de seguridad se creará en la nube. Los datos actuales de tu dispositivo se guardarán sustituyendo los datos de la copia de seguridad actual. ¿Quieres continuar?",
   "backup_creation_dialog_positive": "Crear",
   "backup_creation_dialog_tests": "¿Quieres almacenar todos tus tests?",
   "backup_merge_dialog_title": "Instalar copia de seguridad",
@@ -362,5 +362,8 @@
   "daily_test_start_button": "Empezar",
   "daily_test_start_button_tr": "始める",
   "daily_test_cannot_go_back": "Estás haciendo un test diario. Termina el test, ¡tú puedes!",
-  "settings_notifications_label": "Activar/Desactivar Notificaciones"
+  "settings_notifications_label": "Activar/Desactivar Notificaciones",
+  "stats_tests_by_type": "Número Total de Tests por Tipo",
+  "stats_tests_total_acc": "Acierto Total por Modo de Estudio",
+  "stats_tests_tap_to_specs": "Toca las barras para conocer más detalles de cada tipo de test"
 }
