--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -106,8 +106,8 @@
   "list_details_load_failed": "No se han podido encontrar palabras.",
   "list_details_practice_button_label": "Practicar",
   "list_details_practice_button_label_ext": "練習",
-  "list_details_learningMode_spatial": "Aprendizaje espacial",
-  "list_details_learningMode_random": "Aprendizaje aleatorio",
+  "list_details_learningMode_spatial": "Repetición Espaciada",
+  "list_details_learningMode_random": "Aleatorio",
   "list_details_empty": "No hay palabras disponibles.\n\nAñade nuevas palabras a esta lista pulsando en '+' o importalas desde tu copia de seguridad.",
   "list_details_searchBar_hint": "Buscar por palabra, significado, pronunciación",
   "kan_list_tile_createDialogForDeletingKanList_title": "Eliminar una KanList",
@@ -365,5 +365,10 @@
   "settings_notifications_label": "Activar/Desactivar Notificaciones",
   "stats_tests_by_type": "Número Total de Tests por Tipo",
   "stats_tests_total_acc": "Acierto Total por Modo de Estudio",
-  "stats_tests_tap_to_specs": "Toca las barras para conocer más detalles de cada tipo de test"
+  "stats_tests_tap_to_specs": "Toca las barras para conocer más detalles de cada tipo de test",
+  "cambiar_modo_de_aprendizaje_título": "Cambiar el modo de aprendizaje",
+  "list_details_learningMode_fifo": "Peores Primero",
+  "list_details_learningMode_random_desc": "El orden de las palabras será aleatorio y no se repetirá ninguna palabra durante la práctica",
+  "list_details_learningMode_spatial_desc": "Practica usando el aprendizaje espacial SM2: cuando falles una palabra, aparecerá más adelante en la práctica hasta que la aciertes",
+  "list_details_learningMode_fifo_desc": "Las palabras se ordenarán de peor a mejor y no se repetirá ninguna palabra durante la práctica"
 }
