--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -107,7 +107,6 @@
   "list_details_practice_button_label": "Practicar",
   "list_details_practice_button_label_ext": "練習",
   "list_details_learningMode_spatial": "Repetición Espaciada",
-  "list_details_learningMode_random": "Aleatorio",
   "list_details_empty": "No hay palabras disponibles.\n\nAñade nuevas palabras a esta lista pulsando en '+' o importalas desde tu copia de seguridad.",
   "list_details_searchBar_hint": "Buscar por palabra, significado, pronunciación",
   "kan_list_tile_createDialogForDeletingKanList_title": "Eliminar una KanList",
@@ -249,7 +248,7 @@
   "coach_tutorial_kanlists_4": "Cuando encuentres palabras que no conozcas, podrás buscarlas mediante el diccionario y añadirlas directamente a tus listas.",
   "coach_tutorial_detail_1": "Aquí se muestra todo el vocabulario de la lista. Podrás añadir más en cualquier momento a medida que tu estudio avance.\n\nCada vez que practiques en una área (escritura por ejemplo), el vocabulario se actualizará mostrando el porcentaje de acierto de la misma.",
   "coach_tutorial_detail_2": "Añade más vocabulario que veas por la calle, estudiando, leyendo, en videojuegos o anime pulsando aquí.\n\nPodrás crear palabras añadiendo su pronunciación y su significado.",
-  "coach_tutorial_detail_3": "Aquí están las acciones suplementarias. Podrás cambiar de modo de aprendizaje: aleatorio, repetición espaciada o peores primero (izquierda), realizar un test Blitz solamente de esta lista de vocabulario (medio) o añadir esta lista a una carpeta determinada.\n\nEl modo de aprendizaje determina el orden de estudio al practicar una lista de vocabulario:\n\nSi es aleatorio, el orden de las palabras al practicar será aleatorio.\n\nSi es espacial, las palabras que peor se te han dado en anteriores sesiones aparecerán las primeras, siendo las últimas las que mejor te sabes.",
+  "coach_tutorial_detail_3": "Aquí están las acciones suplementarias. Podrás realizar un test Blitz solamente de esta lista de vocabulario (medio) o añadir esta lista a una carpeta determinada.\n\nAl practicar, se usa la repetición espaciada: cuando fallas el estudio de una palabra, esta saldrá más adelante en tu práctica.",
   "coach_tutorial_detail_4": "Por último, si pulsas aquí, podrás cambiar el nombre de la lista, por si te has equivocado o cambiado de opinión con respecto a la temática o categorización elegida.",
   "settings_general_statistics": "Estadísticas Generales",
   "stats_words": "Número Total de Palabras",
@@ -366,10 +365,5 @@
   "stats_tests_by_type": "Número Total de Tests por Tipo",
   "stats_tests_total_acc": "Acierto Total por Modo de Estudio",
   "stats_tests_tap_to_specs": "Toca las barras para conocer más detalles de cada tipo de test",
-  "cambiar_modo_de_aprendizaje_título": "Cambiar el modo de aprendizaje",
-  "list_details_learningMode_fifo": "Peores Primero",
-  "list_details_learningMode_random_desc": "El orden de las palabras será aleatorio y no se repetirá ninguna palabra durante la práctica",
-  "list_details_learningMode_spatial_desc": "Practica usando el aprendizaje espacial SM2: cuando falles una palabra, aparecerá más adelante en la práctica hasta que la aciertes",
-  "list_details_learningMode_fifo_desc": "Las palabras se ordenarán de peor a mejor y no se repetirá ninguna palabra durante la práctica",
-  "folder_practice_title": "Practicar con un subconjunto de palabras de las listas de esta carpeta aplicando el modo de aprendizaje seleccionado"
+  "folder_practice_title": "Practicar con un subconjunto de palabras de las listas de esta carpeta."
 }
