--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -365,5 +365,6 @@
   "stats_tests_by_type": "Gesamtzahl der Tests nach Typ",
   "stats_tests_total_acc": "Gesamt-Genauigkeit nach Studienmodus",
   "stats_tests_tap_to_specs": "Tippen Sie auf die Balken, um mehr Details für jeden Testtyp zu sehen",
-  "folder_practice_title": "Üben Sie mit einer Teilmenge von Wörtern aus den Listen in diesem Ordner."
+  "folder_practice_title": "Üben Sie mit einer Teilmenge von Wörtern aus den Listen in diesem Ordner.",
+  "disclaimer_spatial_repetition": "Die Übung basiert auf dem Lernen durch räumliche Wiederholung. Diese Methode wird so angewandt, dass Wörter, die Sie beim Üben übersehen haben, am Ende der gesamten Prüfung wieder auftauchen (bis Sie sie richtig können). Dies fördert das Lernen und verbessert das Einprägen von Vokabeln"
 }
