--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -365,5 +365,6 @@
   "stats_tests_by_type": "Número Total de Tests por Tipo",
   "stats_tests_total_acc": "Acierto Total por Modo de Estudio",
   "stats_tests_tap_to_specs": "Toca las barras para conocer más detalles de cada tipo de test",
-  "folder_practice_title": "Practicar con un subconjunto de palabras de las listas de esta carpeta."
+  "folder_practice_title": "Practicar con un subconjunto de palabras de las listas de esta carpeta.",
+  "disclaimer_spatial_repetition": "La práctica se basa en el aprendizaje por repetición espaciada. Este método se aplica de tal manera que las palabras que falles durante la práctica, volverán a aparecer al terminar todo el repaso (hasta que las aciertes). Esto estimula el aprendizaje y mejora la memorización del vocabulario."
 }
