--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -19,7 +19,7 @@
   "study_modes_speaking_ext": "発声",
   "study_mode_update_handler_poppedTest_content": "Das Testergebnis ist ungültig und es wird kein Ergebnis ausgegeben.",
   "study_mode_update_handler_finishedTest_content": "Tippen Sie auf „Fertig stellen“, um die Ergebnisse anzuzeigen.",
-  "study_mode_update_handler_poppedPractice_content": "Punkte bis zu diesem Wort werden gespeichert. Punkte für das aktuelle Wort werden halbiert. ",
+  "study_mode_update_handler_poppedPractice_content": "Punkte bis zu diesem Wort werden gespeichert.",
   "study_mode_update_handler_finishedPractice_content": "Tippen Sie auf „Fertig stellen“, um die Lernsitzung zu beenden.",
   "study_mode_update_handler_finished_title": "Sie sind fertig!",
   "study_mode_update_handler_popped_title": "Wirklich beenden?",
@@ -106,8 +106,7 @@
   "list_details_load_failed": "Wort konnte nicht abgerufen werden ",
   "list_details_practice_button_label": "Üben",
   "list_details_practice_button_label_ext": "練習",
-  "list_details_learningMode_spatial": "Spaced repetition",
-  "list_details_learningMode_random": "Zufälliges Lernen",
+  "list_details_learningMode_spatial": "Abgestufte Wiederholung",
   "list_details_empty": "Kein verfügbares Wort.\n\nFügen Sie neue Wörter zu dieser Liste hinzu, indem Sie auf '+' tippen, oder importieren Sie sie aus Ihrem Backup.",
   "list_details_searchBar_hint": "Suche nach Wort, Bedeutung, Aussprache",
   "kan_list_tile_createDialogForDeletingKanList_title": "KanList entfernen",
@@ -249,7 +248,7 @@
   "coach_tutorial_kanlists_4": "Wenn du auf Wörter stößt, die du nicht kennst, kannst du sie im Wörterbuch nachschlagen und sie direkt zu deinen Listen hinzufügen",
   "coach_tutorial_detail_1": "Hier werden alle Vokabeln aus der Liste angezeigt. Sie können im Laufe Ihres Studiums jederzeit mehr hinzufügen.\n\nJedes Mal, wenn Sie in einem Bereich (z. B. Schreiben) üben, wird das Vokabular aktualisiert und der Prozentsatz des Erfolgs in diesem Bereich angezeigt.",
   "coach_tutorial_detail_2": "Fügen Sie weitere Vokabeln hinzu, die Sie auf der Straße, beim Lernen, Lesen, in Videospielen oder Anime sehen, indem Sie hier klicken.\n\n Sie können Wörter erstellen, indem Sie ihre Aussprache und Bedeutung hinzufügen.",
-  "coach_tutorial_detail_3": "Hier sind die zusätzlichen Aktionen. Sie können den Lernmodus ändern: zufällig oder räumlich (links), einen Blitztest nur mit dieser Vokabelliste machen (Mitte) oder die Liste zu einem bestimmten Ordner hinzufügen.\n\nDer Lernmodus bestimmt die Reihenfolge des Lernens beim Üben einer Vokabelliste: \n\nWenn er zufällig ist, wird die Reihenfolge der Wörter beim Üben zufällig sein.\n\nWenn er räumlich ist, werden die Wörter, bei denen Sie in früheren Sitzungen am schlechtesten abgeschnitten haben, zuerst erscheinen, die letzten sind die, die Sie am besten kennen.",
+  "coach_tutorial_detail_3": "Hier sind die ergänzenden Aktionen. Sie können einen Blitztest nur mit dieser Vokabelliste machen oder die Liste zu einem bestimmten Ordner hinzufügen.\n\nBeim Üben wird die räumliche Wiederholung verwendet: alle Wörter, die Sie nicht lernen, werden im weiteren Verlauf der Übung wieder auftauchen.",
   "coach_tutorial_detail_4": "Wenn Sie hier klicken, können Sie schließlich den Namen der Liste ändern, falls Sie einen Fehler gemacht oder Ihre Meinung über das gewählte Thema oder die Kategorisierung geändert haben.",
   "settings_general_statistics": "Allgemeine Statistik",
   "stats_words": "Gesamtzahl der Wörter",
@@ -365,5 +364,7 @@
   "settings_notifications_label": "Aktivieren/Deaktivieren von Benachrichtigungen",
   "stats_tests_by_type": "Gesamtzahl der Tests nach Typ",
   "stats_tests_total_acc": "Gesamt-Genauigkeit nach Studienmodus",
-  "stats_tests_tap_to_specs": "Tippen Sie auf die Balken, um mehr Details für jeden Testtyp zu sehen"
+  "stats_tests_tap_to_specs": "Tippen Sie auf die Balken, um mehr Details für jeden Testtyp zu sehen",
+  "folder_practice_title": "Üben Sie mit einer Teilmenge von Wörtern aus den Listen in diesem Ordner.",
+  "disclaimer_spatial_repetition": "Die Übung basiert auf dem Lernen durch räumliche Wiederholung. Diese Methode wird so angewandt, dass Wörter, die Sie beim Üben übersehen haben, am Ende der gesamten Prüfung wieder auftauchen (bis Sie sie richtig können). Dies fördert das Lernen und verbessert das Einprägen von Vokabeln"
 }
