--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -19,7 +19,7 @@
   "study_modes_speaking_ext": "発声",
   "study_mode_update_handler_poppedTest_content": "The test will result invalid and no result will be provided.",
   "study_mode_update_handler_finishedTest_content": "Tap on 'Finish' to see the results.",
-  "study_mode_update_handler_poppedPractice_content": "Score up to this word will be saved. Current word will be count as 50%.",
+  "study_mode_update_handler_poppedPractice_content": "Score up to this word will be saved.",
   "study_mode_update_handler_finishedPractice_content": "Tap on 'Finish' to end the study session.",
   "study_mode_update_handler_finished_title": "You are done!",
   "study_mode_update_handler_popped_title": "Do you want to leave?",
@@ -106,8 +106,7 @@
   "list_details_load_failed": "Failed to retrieve words",
   "list_details_practice_button_label": "Practice",
   "list_details_practice_button_label_ext": "練習",
-  "list_details_learningMode_spatial": "Spatial Learning",
-  "list_details_learningMode_random": "Random Learning",
+  "list_details_learningMode_spatial": "Spaced Repetition",
   "list_details_empty": "No available words.\n\nAdd new words to this list by tapping on '+' or import them from your backup.",
   "list_details_searchBar_hint": "Search by word, meaning, pronunciation",
   "kan_list_tile_createDialogForDeletingKanList_title": "Remove a KanList",
@@ -249,7 +248,7 @@
   "coach_tutorial_kanlists_4": "When you find words you don't know, you can look them up in the dictionary and add them directly to your lists.",
   "coach_tutorial_detail_1": "All the vocabulary in the list is displayed here. You can add more at any time as your study progresses.\n\nEach time you practise in an area (e.g. writing), the vocabulary will be updated showing the percentage of success in that area.",
   "coach_tutorial_detail_2": "Add more vocabulary you see on the street, studying, reading, video games or anime by clicking here.\n\nYou can create words by adding their pronunciation and meaning.",
-  "coach_tutorial_detail_3": "Here are the supplementary actions. You can change the learning mode: random or spatial (left), do a Blitz test of this vocabulary list only (middle) or add the list to a certain folder.\n\nThe learning mode determines the order of study when practising a vocabulary list:\n\nIf it is random, the order of the words when practising will be random.\n\nIf it is spatial, the words that you have been worst at in previous sessions will appear first, the last ones being the ones you know best.",
+  "coach_tutorial_detail_3": "Here are the supplementary actions. You can do a Blitz test of this vocabulary list only or add the list to a certain folder.\n\nWhen practicing, spatial repetition is used: all the words that you fail to study, will appear again further in the practice.",
   "coach_tutorial_detail_4": "Finally, if you click here, you will be able to change the name of the list, in case you have made a mistake or changed your mind about the chosen subject or categorisation.",
   "settings_general_statistics": "General Statistics",
   "stats_words": "Total Number of Words",
@@ -365,5 +364,7 @@
   "settings_notifications_label": "Enable/Disable Notifications",
   "stats_tests_by_type": "Total Number of Tests by Type",
   "stats_tests_total_acc": "Total Accuracy by Study Mode",
-  "stats_tests_tap_to_specs": "Tap on the bars to see more details for each test type"
+  "stats_tests_tap_to_specs": "Tap on the bars to see more details for each test type",
+  "folder_practice_title": "Practice with a subset of words of the lists within this folder.",
+   "disclaimer_spatial_repetition": "The practice is based on learning by spaced repetition. This method is applied in such a way that the words you miss during practice, will reappear at the end of the entire review (until you get them right). This stimulates learning and improves vocabulary memorization."
 }
