--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -19,7 +19,7 @@
   "study_modes_speaking_ext": "発声",
   "study_mode_update_handler_poppedTest_content": "La prueba será inválida y no se proporcionará ningún resultado",
   "study_mode_update_handler_finishedTest_content": "Pulsa en 'Finalizar' para ver los resultados",
-  "study_mode_update_handler_poppedPractice_content": "Se guardará la puntuación hasta esta palabra. La palabra actual contará con el 50% de acierto",
+  "study_mode_update_handler_poppedPractice_content": "Se guardará la puntuación hasta esta palabra.",
   "study_mode_update_handler_finishedPractice_content": "Pulsa en 'Finalizar' para terminar la sesión de estudio",
   "study_mode_update_handler_finished_title": "¡Has terminado!",
   "study_mode_update_handler_popped_title": "¿Quieres salir?",
@@ -106,8 +106,7 @@
   "list_details_load_failed": "No se han podido encontrar palabras.",
   "list_details_practice_button_label": "Practicar",
   "list_details_practice_button_label_ext": "練習",
-  "list_details_learningMode_spatial": "Aprendizaje espacial",
-  "list_details_learningMode_random": "Aprendizaje aleatorio",
+  "list_details_learningMode_spatial": "Repetición Espaciada",
   "list_details_empty": "No hay palabras disponibles.\n\nAñade nuevas palabras a esta lista pulsando en '+' o importalas desde tu copia de seguridad.",
   "list_details_searchBar_hint": "Buscar por palabra, significado, pronunciación",
   "kan_list_tile_createDialogForDeletingKanList_title": "Eliminar una KanList",
@@ -249,7 +248,7 @@
   "coach_tutorial_kanlists_4": "Cuando encuentres palabras que no conozcas, podrás buscarlas mediante el diccionario y añadirlas directamente a tus listas.",
   "coach_tutorial_detail_1": "Aquí se muestra todo el vocabulario de la lista. Podrás añadir más en cualquier momento a medida que tu estudio avance.\n\nCada vez que practiques en una área (escritura por ejemplo), el vocabulario se actualizará mostrando el porcentaje de acierto de la misma.",
   "coach_tutorial_detail_2": "Añade más vocabulario que veas por la calle, estudiando, leyendo, en videojuegos o anime pulsando aquí.\n\nPodrás crear palabras añadiendo su pronunciación y su significado.",
-  "coach_tutorial_detail_3": "Aquí están las acciones suplementarias. Podrás cambiar de modo de aprendizaje: aleatorio o espacial (izquierda), realizar un test Blitz solamente de esta lista de vocabulario (medio) o añadir esta lista a una carpeta determinada.\n\nEl modo de aprendizaje determina el orden de estudio al practicar una lista de vocabulario:\n\nSi es aleatorio, el orden de las palabras al practicar será aleatorio.\n\nSi es espacial, las palabras que peor se te han dado en anteriores sesiones aparecerán las primeras, siendo las últimas las que mejor te sabes.",
+  "coach_tutorial_detail_3": "Aquí están las acciones suplementarias. Podrás realizar un test Blitz solamente de esta lista de vocabulario (medio) o añadir esta lista a una carpeta determinada.\n\nAl practicar, se usa la repetición espaciada: cuando fallas el estudio de una palabra, esta saldrá más adelante en tu práctica.",
   "coach_tutorial_detail_4": "Por último, si pulsas aquí, podrás cambiar el nombre de la lista, por si te has equivocado o cambiado de opinión con respecto a la temática o categorización elegida.",
   "settings_general_statistics": "Estadísticas Generales",
   "stats_words": "Número Total de Palabras",
@@ -365,5 +364,7 @@
   "settings_notifications_label": "Activar/Desactivar Notificaciones",
   "stats_tests_by_type": "Número Total de Tests por Tipo",
   "stats_tests_total_acc": "Acierto Total por Modo de Estudio",
-  "stats_tests_tap_to_specs": "Toca las barras para conocer más detalles de cada tipo de test"
+  "stats_tests_tap_to_specs": "Toca las barras para conocer más detalles de cada tipo de test",
+  "folder_practice_title": "Practicar con un subconjunto de palabras de las listas de esta carpeta.",
+  "disclaimer_spatial_repetition": "La práctica se basa en el aprendizaje por repetición espaciada. Este método se aplica de tal manera que las palabras que falles durante la práctica, volverán a aparecer al terminar todo el repaso (hasta que las aciertes). Esto estimula el aprendizaje y mejora la memorización del vocabulario."
 }
