Syncfusion Vertical Chart

--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -368,5 +368,6 @@
   "folder_practice_title": "Üben Sie mit einer Teilmenge von Wörtern aus den Listen in diesem Ordner.",
   "disclaimer_spatial_repetition": "Die Übung basiert auf dem Lernen durch räumliche Wiederholung. Diese Methode wird so angewandt, dass Wörter, die Sie beim Üben übersehen haben, am Ende der gesamten Prüfung wieder auftauchen (bis Sie sie richtig können). Dies fördert das Lernen und verbessert das Einprägen von Vokabeln",
   "settings_general_kanji_list": "Gruppenstatistiken nach Wort",
-  "settings_general_kanji_list_description": "Wenn diese Funktion aktiviert ist, wird bei allen KanLists-Wörtern der Mittelwert über alle Studienmodi hinweg angezeigt, anstatt zwischen ihnen zu wechseln."
+  "settings_general_kanji_list_description": "Wenn diese Funktion aktiviert ist, wird bei allen KanLists-Wörtern der Mittelwert über alle Studienmodi hinweg angezeigt, anstatt zwischen ihnen zu wechseln.",
+  "tests": "Tests"
 }
