--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -368,5 +368,6 @@
   "folder_practice_title": "Practice with a subset of words of the lists within this folder.",
   "disclaimer_spatial_repetition": "The practice is based on learning by spaced repetition. This method is applied in such a way that the words you miss during practice, will reappear at the end of the entire review (until you get them right). This stimulates learning and improves vocabulary memorization.",
   "settings_general_kanji_list": "Group statistics by word",
-  "settings_general_kanji_list_description": "When active, all KanLists words will show the mean accross all study modes instead of swipping between them"
+  "settings_general_kanji_list_description": "When active, all KanLists words will show the mean accross all study modes instead of swipping between them",
+  "tests": "Tests"
 }
