Moved add word to actionbar and arranged tutorials

--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -247,9 +247,8 @@
   "coach_tutorial_kanlists_3": "These are the different actions you can perform (from left to right):\n\n- View your vocabulary lists.\n\n- Add a new list to the market as well as to your own lists. You can create lists by lessons of a book, subject, difficulty...\n\nIf you want to delete a list, leave it pressed and a dialog will appear to perform this action.\n\n-Access to the market, where you can download vocabulary lists created and uploaded by other users",
   "coach_tutorial_kanlists_4": "When you find words you don't know, you can look them up in the dictionary and add them directly to your lists.",
   "coach_tutorial_detail_1": "All the vocabulary in the list is displayed here. You can add more at any time as your study progresses.\n\nEach time you practise in an area (e.g. writing), the vocabulary will be updated showing the percentage of success in that area.",
-  "coach_tutorial_detail_2": "Add more vocabulary you see on the street, studying, reading, video games or anime by clicking here.\n\nYou can create words by adding their pronunciation and meaning.",
-  "coach_tutorial_detail_3": "Here are the supplementary actions. You can do a Blitz test of this vocabulary list only or add the list to a certain folder.\n\nWhen practicing, spatial repetition is used: all the words that you fail to study, will appear again further in the practice.",
-  "coach_tutorial_detail_4": "Finally, if you click here, you will be able to change the name of the list, in case you have made a mistake or changed your mind about the chosen subject or categorisation.",
+  "coach_tutorial_detail_2": "Here are the supplementary actions. You can do a Blitz test of this vocabulary list (left), add the list to a certain folder (center) or add more vocabulary to your list when you see it on the street, studying, reading, video games or anime.\n\nWhen practicing, spatial repetition is used: all the words that you fail to study, will appear again further in the practice.",
+  "coach_tutorial_detail_3": "Finally, if you click here, you will be able to change the name of the list, in case you have made a mistake or changed your mind about the chosen subject or categorisation.",
   "settings_general_statistics": "General Statistics",
   "stats_words": "Total Number of Words",
   "stats_tests": "Total Number of Tests",
