--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -236,7 +236,6 @@
   "dict_search_button_title": "Search",
   "dict_predictions_most_likely": "Most likely",
   "dict_predictions_less_likely": "Less likely",
-  "dict_predictions_disclaimer": "Search function uses Machine Learning algorithms and the predictions may not be aligned with what you draw. If the predictions are not accurate, try drawing the kanji again.",
   "dict_jisho_add_kanji_bottom_sheet_title": "Select a KanList to add the word and classify it",
   "dict_jisho_add_kanji_label": "Add to KanList",
   "dict_jisho_create_kanji_list": "Create a new KanList",
@@ -244,8 +243,7 @@
   "dict_model_not_loaded": "Could not load model :(",
   "coach_tutorial_kanlists_1": "Here are the vocabulary lists created by you (these are sample vocabulary lists). In a newly created list, you should include the words you want according to a theme defined by you.",
   "coach_tutorial_kanlists_2": "You can tap here in order to view all your lists or folders. You can create folders to group lists for further classification and order in your study.\n\nFor example, you might want to store all your lists from the Mina No Nihongo or Genki lessons in one single folder.",
-  "coach_tutorial_kanlists_3": "These are the different actions you can perform (from left to right):\n\n- View your vocabulary lists.\n\n- Add a new list to the market as well as to your own lists. You can create lists by lessons of a book, subject, difficulty...\n\nIf you want to delete a list, leave it pressed and a dialog will appear to perform this action.\n\n-Access to the market, where you can download vocabulary lists created and uploaded by other users",
-  "coach_tutorial_kanlists_4": "When you find words you don't know, you can look them up in the dictionary and add them directly to your lists.",
+  "coach_tutorial_kanlists_3": "These are the different actions you can perform (from left to right):\n\n- View your vocabulary lists.\n\n- Look up words you don't know using the dictionary and add them directly to your lists.\n\n-  Add a new list both to the market and to your own lists AND take a test. You can create the lists by lessons of a book, subject, difficulty... If you want to delete a list, leave it pressed and a dialog will appear to perform this action.\n\n- Access to the market, where you can download vocabulary lists that have been created and uploaded by other users.\n\n- Finally, the settings where you can view your statistics and change other functions.",
   "coach_tutorial_detail_1": "All the vocabulary in the list is displayed here. You can add more at any time as your study progresses.\n\nEach time you practise in an area (e.g. writing), the vocabulary will be updated showing the percentage of success in that area.",
   "coach_tutorial_detail_2": "Here are the supplementary actions. You can do a Blitz test of this vocabulary list (left), add the list to a certain folder (center) or add more vocabulary to your list when you see it on the street, studying, reading, video games or anime.\n\nWhen practicing, spatial repetition is used: all the words that you fail to study, will appear again further in the practice.",
   "coach_tutorial_detail_3": "Finally, if you click here, you will be able to change the name of the list, in case you have made a mistake or changed your mind about the chosen subject or categorisation.",
