--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -247,7 +247,7 @@
   "coach_tutorial_detail_1": "All the vocabulary in the list is displayed here. You can add more at any time as your study progresses.\n\nEach time you practise in an area (e.g. writing), the vocabulary will be updated showing the percentage of success in that area.",
   "coach_tutorial_detail_2": "Here are the supplementary actions. You can do a Blitz test of this vocabulary list (left), add the list to a certain folder (center) or add more vocabulary to your list when you see it on the street, studying, reading, video games or anime.\n\nWhen practicing, spatial repetition is used: all the words that you fail to study, will appear again further in the practice.",
   "coach_tutorial_detail_3": "Finally, if you click here, you will be able to change the name of the list, in case you have made a mistake or changed your mind about the chosen subject or categorisation.",
-  "settings_general_statistics": "General Statistics",
+  "settings_general_statistics": "Statistics",
   "stats_words": "Total Number of Words",
   "stats_tests": "Total Number of Tests",
   "stats_words_lists": "Lists",
